<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_bell"
            android:title="@string/overview" />

        <item
            android:id="@+id/nav_symptoms"
            android:icon="@drawable/coronavirus"
            android:title="@string/symptoms" />
        <item
            android:id="@+id/nav_prevention"
            android:icon="@drawable/ic_preventation"
            android:title="@string/prevention" />

        <item
            android:id="@+id/nav_treatment"
            android:icon="@drawable/ic_medicine"
            android:title="@string/treatment" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/statistics" />

        <item
            android:id="@+id/nav_world"
            android:icon="@drawable/ic_world_data"
            android:title="World-wide Statistics" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />

    </group>
</menu>