<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:elevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="8dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:contentPadding="8dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/update_frequency" />

        <RadioGroup
            android:id="@+id/rg_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:attr/dividerHorizontal"
            android:showDividers="middle">

            <RadioButton
                android:id="@+id/rg_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_1" />

            <RadioButton
                android:id="@+id/rg_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_2" />

            <RadioButton
                android:id="@+id/rg_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_5" />

            <RadioButton
                android:id="@+id/rg_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_24" />

            <RadioButton
                android:id="@+id/rg_manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_manually" />
        </RadioGroup>

    </LinearLayout>
</androidx.cardview.widget.CardView>