<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="@dimen/cardview_default_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/flag_iv"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_egypt_flag"
            tools:srcCompat="@drawable/ic_egypt_flag" />

        <TextView
            android:id="@+id/country_tv"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="none"
            android:maxLines="2"
            android:scrollHorizontally="false"
            app:layout_constraintEnd_toEndOf="@+id/flag_iv"
            app:layout_constraintStart_toStartOf="@+id/flag_iv"
            app:layout_constraintTop_toBottomOf="@+id/flag_iv"
            tools:text="@string/egypt" />

        <TextView
            android:id="@+id/confirmed_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_text_view"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/confirmed_cases_lbl"
            app:layout_constraintStart_toStartOf="@+id/confirmed_cases_lbl"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1794" />

        <TextView
            android:id="@+id/recovered_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_text_view"
            android:gravity="center"
            android:shadowColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/recovered_cases_lbl"
            app:layout_constraintStart_toStartOf="@+id/recovered_cases_lbl"
            app:layout_constraintTop_toBottomOf="@+id/new_cases_lbl"
            tools:text="384" />

        <TextView
            android:id="@+id/deaths_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_text_view"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/death_cases_lbl"
            app:layout_constraintStart_toStartOf="@+id/death_cases_lbl"
            app:layout_constraintTop_toBottomOf="@+id/confirmed_cases_lbl"
            tools:text="135" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_info"
            tools:layout_editor_absoluteX="342dp"
            tools:srcCompat="@drawable/ic_info" />

        <TextView
            android:id="@+id/new_cases_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/new_cases"
            app:layout_constraintStart_toEndOf="@+id/country_tv"
            app:layout_constraintTop_toBottomOf="@+id/flag_iv" />

        <TextView
            android:id="@+id/recovered_cases_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/recovered_cases"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/recovered_tv" />

        <TextView
            android:id="@+id/death_cases_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/death_cases"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/recovered_cases_lbl"
            app:layout_constraintTop_toBottomOf="@+id/deaths_tv" />

        <TextView
            android:id="@+id/confirmed_cases_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/confirmed_cases"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/new_cases_lbl"
            app:layout_constraintTop_toTopOf="@+id/new_cases_lbl" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxWidth="60dp"
            android:maxHeight="60dp"
            android:text="@string/subscribe"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/flag_iv"
            app:layout_constraintStart_toStartOf="@+id/flag_iv"
            app:layout_constraintTop_toBottomOf="@+id/country_tv" />

        <TextView
            android:id="@+id/new_cases_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_text_view"
            android:gravity="center"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="@+id/new_cases_lbl"
            app:layout_constraintStart_toStartOf="@+id/new_cases_lbl"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="5555" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>